# ralph

./: .envrc  .gitignore  Cargo.toml  README.md  SPEC.md  flake.nix  ledger.jsonl
.githooks/: commit-msg  pre-commit  pre-commit.bak
.github/agents/: ralph-implementer.agent.md  ralph-planner.agent.md
.github/workflows/: ci.yml  release.yml
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: main.rs
crates/ralph-cli/src/commands/: hook.rs  implement.rs  init.rs  mod.rs  plan.rs  status.rs
crates/ralph-cli/tests/: integration_tests.rs
crates/ralph-lib/: Cargo.toml
crates/ralph-lib/benches/: benchmarks.rs
crates/ralph-lib/src/: error.rs  ledger.rs  lib.rs  prd.rs  validation.rs
docs/: NIX_REQUIREMENTS.md  RUST_REQUIREMENTS.md
docs/ralph/no-more-commit-hook/: prd.md
docs/ralph/no-rust/: prd.md
docs/ralph/pre-commit/: prd.md
docs/ralph/stateless-execution/: prd.md
examples/: validation.json
examples/docs/ralph/example-feature/: prd.md
examples/ralph/tasks/example-feature/: prd.json
ralph/: ledger.jsonl  ledger_event_5.jsonl  pre-commit  ralph  validation.json
ralph/tasks/meowmix/: prd.json
ralph/tasks/no-more-commit-hook/: ledger.jsonl  prd.json
ralph/tasks/no-rust/: prd.json
ralph/tasks/pre-commit/: ledger.jsonl  prd.json
ralph/tasks/stateless-execution/: ledger.jsonl  prd.json
ralph/tasks/test-feature/: prd.json
schemas/: prd.schema.json
templates/: Cargo.toml  flake.nix
templates/.github/agents/: ralph-implementer.agent.md  ralph-planner.agent.md
